Added connection string and Installing Microsoft EF Core (Entity Framework)

--- a/EmployeeManagment/appsettings.json
+++ b/EmployeeManagment/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-FF8V0MC1\\SQLEXPRESS;Database=EmployeeMangament;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
